# EnchantingShadowyNumber

./: .env.example  .gitignore  .replit  INTEGRATION_SUMMARY.md  LMSTUDIO_QUICK_REFERENCE.md  LMSTUDIO_SETUP.md  PROJECT.md  README.md  compliance_checker.db  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  start.py
Microsoft/Windows/PowerShell/: ModuleAnalysisCache
apps/backend/: Dockerfile  compliance_checker.db  main.py  requirements.txt
apps/backend/core/: analysis_progress.py  analysis_progress_simple.py  config.py  progress.py  progress_manager.py  runtime_config.json  runtime_config.py
apps/backend/db/: models.py  session.py  (+1 more)
apps/frontend/: Dockerfile  vite.config.ts
attached_assets/: Pasted--Project-Local-Agreement-Compliance-Checker-RBI-Standar_1776246523689.txt  Pasted--Project-Local-Agreement-Compliance-Checker-RBI-Standar_1776617040871.txt  Pasted-I-am-building-a-FastAPI-React-RBI-Compliance-Checker-an_1777954428445.txt  Pasted-I-want-you-to-completely-refactor-and-reorganize-my-ful_1778176362797.txt
backend/: .env.example  ai_analyzer.py  database.py  document_parser.py  log_buffer.py  main.py  models.py  requirements.txt  runtime_config.json  runtime_config.py  seed_data.py
backend/routes/: analysis.py  clauses.py  debug.py  dev.py  documents.py  reports.py  settings.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
scripts/: dev.py  healthcheck.py  seed_db.py  setup.py  update-deps.py
shared/constants/: __init__.py
shared/types/: index.ts
(+33 files in other folders)
