[project]
name = "ai-compliance-checker"
version = "0.1.0"
description = "RBI agreement compliance checker with FastAPI backend and React frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "pdf2image",
    "pdfplumber",
    "pillow",
    "pytesseract",
    "python-docx",
    "python-dotenv",
    "python-multipart",
    "reportlab",
    "sqlalchemy",
    "uvicorn[standard]",
]
